force-app/main/default/objects/Product_Integration_Config__mdt/Product_Integration_Config__mdt.object-meta.xml
<CustomObject>
    <description>BC-230 holds configuration for running Product Integration related apex</description>
    <label>Product Integration Config</label>
    <pluralLabel>Product Integration Configs</pluralLabel>
</CustomObject>