force-app/main/default/objects/Product_Integration_Config__mdt/fields/Entitlement_Job_CRON__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Job_CRON__c</fullName>
    <defaultValue>&apos;0 0 * * * ?&apos;</defaultValue>
    <description>BC-230 CRON expression that drives times when Product Entitlement Job runs. CRON info https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_scheduler.htm</description>
    <inlineHelpText>BC-230 CRON expression that drives times when Product Entitlement Job runs. CRON info https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_scheduler.htm</inlineHelpText>
    <label>Entitlement Job CRON</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>