force-app/main/default/objects/Product_Integration_Config__mdt/fields/General_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>General_Entitlement__c</fullName>
    <description>BC-230 name of CommerceEntitlementPolicy that all products should be a part of by default</description>
    <inlineHelpText>BC-230 name of CommerceEntitlementPolicy that all products should be a part of by default</inlineHelpText>
    <label>General Entitlement</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>