force-app/main/default/objects/Product_Integration_Config__mdt/fields/Webstore__c.field-meta.xml
<CustomField>
    <fullName>Webstore__c</fullName>
    <label>Webstore</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>